Update functions_v11.sh